@@ -1,3 +1,7 @@
+2000-02-12  Per Bothner  <per@bothner.com>
+
+	* ClassType.java (addInterface):  New method.
+
 2000-02-10  Per Bothner  <per@bothner.com>
 
 	* Type.java (mapNameToType):  New static replaces ClassType.classTable.
